# Final-Project-AI-ML

./: .gitignore  PROJECT_REPORT.md  PROJECT_REPORT.txt  README.md  env.example  leaderboard.csv  pyproject.toml  requirements.txt
mlflow/: SETUP_GUIDE.md
reports/: drift_results.json
src/api/: __init__.py  main.py
src/automl/: __init__.py  run_h2o_automl.py
src/data/: __init__.py  make_dataset.py
src/drift/: __init__.py  drift_analysis.py
src/models/: __init__.py  train_lightgbm.py  train_randomforest.py  train_xgboost.py
